[tool.poetry]
name = "arpvpn"
version = "1.2.0"
description = "WireGuard management with client and site-to-site VPN support"
authors = ["Jose <joseantoniomazon@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/arphost-com/ARPVPN"
repository = "https://github.com/arphost-com/ARPVPN"
keywords = ["wireguard", "gui", "webserver", "flask", "vpn", "site-to-site", "observability"]

[tool.poetry.dependencies]
python = "^3.9"
coolname = "^2.2.0"
cryptography = "^43.0.0"
Faker = "^28.0.0"
Flask = "^3.0.3"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
PyYAML = "^6.0.2"
schedule = "^1.2.2"
WTForms = "^3.1.2"
yamlable = "^1.1.3"
Flask-QRcode = "^3.1.0"
Pillow = "^11.1.0"
Jinja2 = "^3.1.5"
Werkzeug = "^3.0.6"
MarkupSafe = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.coverage.run]
omit = ["*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
