[tool.poetry]
name = "arpvpn"
version = "2.0.2"
description = "WireGuard management with client and site-to-site VPN support"
authors = ["Jose <joseantoniomazon@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/arphost-com/ARPVPN"
repository = "https://github.com/arphost-com/ARPVPN"
keywords = ["wireguard", "gui", "webserver", "flask", "vpn", "site-to-site", "observability"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
coolname = "^2.2.0"
cryptography = "^46.0.5"
Faker = "^28.0.0"
Flask = "^3.0.3"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
PyYAML = "^6.0.2"
schedule = "^1.2.2"
WTForms = "^3.1.2"
yamlable = "^1.1.1"
Flask-QRcode = "^3.1.0"
Pillow = "^12.1.1"
Jinja2 = "^3.1.5"
Werkzeug = "^3.0.6"
MarkupSafe = "^3.0.2"
zipp = "^3.23.0"
certifi = "^2026.1.4"
idna = "^3.11"
Pygments = "^2.19.2"
requests = "^2.32.5"
urllib3 = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
coverage = "^7.11.0"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.coverage.run]
omit = ["*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
